Agregar inicio y rutas

--- a/pagina-web/src/app/header/header.component.html
+++ b/pagina-web/src/app/header/header.component.html
@@ -11,6 +11,7 @@
             <li><a href="#">Paquetes</a></li>
             <li><a href="#">Community</a></li>
             <li><a href="#">Ayuda</a></li>
+            <link>
             <li><a href="C:\Users\Richar\Desktop\pagina-web\src\app\infopagina\infopagina.component.html">Acerca de nosotros</a></li>
             <li class="buscador">
                 <div class="container-1">
@@ -22,3 +23,6 @@
     </nav>
 
 </header>
+<body>
+    <app-index></app-index>
+</body>
