--- a/pagina-web/src/app/app.component.html
+++ b/pagina-web/src/app/app.component.html
@@ -1,3 +1,32 @@
-<app-header></app-header>
-<app-seccionayuda></app-seccionayuda>
-<app-footer></app-footer>
+<header id="main-header">
+
+    <a id="logo-header" href="#">
+        <span class="site-name">Tecnologyc Share</span>
+        <span class="site-desc">Contribuyendo con tu crecimiento</span>
+    </a>
+
+    <nav>
+        <ul>
+            <li><a [routerLink]="['inicio']">Inicio</a></li>
+            <li><a href="#">Paquetes</a></li>
+            <li><a href="#">Community</a></li>
+            <li><a [routerLink]="['seccionayuda']">Ayuda</a></li>
+            <li><a [routerLink]="['Sobrenosotros']">Acerca de nosotros</a></li>
+            <li class="buscador">
+                <div class="container-1">
+                    <span class="icon"><i class="fa fa-search"></i></span>
+                    <input type="search" id="search" placeholder="Search..." />
+                </div>
+            </li>
+        </ul>
+    </nav>
+</header>
+
+<body>
+    <div class="container main-container">
+        <router-outlet></router-outlet>
+    </div>
+
+
+</body>
+
