inicio con productos y footer

--- a/pagina-web/src/app/app.component.html
+++ b/pagina-web/src/app/app.component.html
@@ -29,4 +29,35 @@
 
 
 </body>
+<footer class="site-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-6">
+          <h6>Sobre nosotros.</h6>
+          <p class="text-justify">Tecnologyc share es una sitio web que consiste en llevar a cabo la comercialización productos de tecnología mediante un sitio web dónde ofrecemos un catálogo de productos basados en la disponibilidad de múltiples empresas electrónicas y tecnológicas.</p>
+          <button><a href="Sobrenosotros"> Ver mas.</a></button>
+        </div>
 
+        
+      </div>
+      <hr>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 col-sm-6 col-xs-12">
+          <p class="copyright-text">Copyright &copy; 2017 All Rights Reserved by 
+       <a href="#">Scanfcode</a>.
+          </p>
+        </div>
+
+        <div class="col-md-4 col-sm-6 col-xs-12">
+          <ul class="social-icons">
+            <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+            <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+            <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
+            <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>   
+          </ul>
+        </div>
+      </div>
+    </div>
+</footer>
