--- a/pagina-web/src/app/index/index.component.css
+++ b/pagina-web/src/app/index/index.component.css
@@ -18,9 +18,16 @@
 }
 
 .uno {
-    float: left;
+    float: right;
     height: 49;
     width: 24%;
     text-align: center;
 
 }
+.tres{
+
+    height: 49;
+    width: 24%;
+    text-align: center;
+  
+  }
