--- a/pagina-web/src/app/index/index.component.html
+++ b/pagina-web/src/app/index/index.component.html
@@ -1,4 +1,5 @@
 <body>
+    <div>
     <div class="paginanombre">
         <h1>Este es el inicio</h1>
     </div>
@@ -7,29 +8,29 @@
     </div>
     <div class="arriba">
         <div class="uno">
-            <a href="https://www.facebook.com/cristianarturo.navarromedina"><img
-                    src="https://m.media-amazon.com/images/I/71z22cRPeeL.jpg" alt="facebook" width="150"
+            <a href="ProductoUno"><img
+                    src="https://m.media-amazon.com/images/I/71z22cRPeeL.jpg" width="150"
                     height="150"></a>
             <h4>Arduino UNO R3 [A000066] Placa de microcontrolador</h4>
         </div>
 
         <div class="uno">
-            <a href="https://www.facebook.com/cristianarturo.navarromedina"><img src="https://cdn.shopify.com/s/files/1/1040/8806/products/photo_OS-00008_Proto_Grande_Blanca_10_700x700.png?v=1600808942
+            <a href="Productodos"><img src="https://cdn.shopify.com/s/files/1/1040/8806/products/photo_OS-00008_Proto_Grande_Blanca_10_700x700.png?v=1600808942
                     " alt="facebook" width="150" height="150"></a>
             <h4>PROTOBOARD GRANDE 800 PUNTOS</h4>
         </div>
 
         <div class="uno">
-            <a href="https://www.facebook.com/cristianarturo.navarromedina"><img src="https://cdn.shopify.com/s/files/1/1040/8806/products/photo_OS-00005_ProtoboardChica_400p_01_700x700.png?v=1595434654
+            <a href="Productotres"><img src="https://cdn.shopify.com/s/files/1/1040/8806/products/photo_OS-00005_ProtoboardChica_400p_01_700x700.png?v=1595434654
                     " alt="facebook" width="150" height="150"></a>
             <h4>PROTOBOARD CHICA 400 PUNTOS</h4>
         </div>
-        <div class="uno">
-            <a href="https://www.facebook.com/cristianarturo.navarromedina"><img
+        <div class="tres">
+            <a href="Productocuatro"><img
                     src="https://elecan3d.com/995-large_default/cable-dupont-macho-macho-30cm.jpg" alt="facebook"
                     width="150" height="150"></a>
             <h4>Cable Dupont Macho-Macho 30cm</h4>
         </div>
 
-    </div>
+    </div></div>
 </body>
