--- a/pagina-web/src/app/infopagina/infopagina.component.html
+++ b/pagina-web/src/app/infopagina/infopagina.component.html
@@ -1,4 +1,4 @@
-<h1></h1>
+
 <section id="pantalladiv">
     <div class="izquierdaarriba">
         <img src="https://cronicaglobal.elespanol.com/uploads/s1/43/76/71/2/componentes-electro-nicos.png" width="500"
@@ -48,7 +48,7 @@
             <a href="https://www.youtube.com/channel/UC5FW8YTobz7mTASfVa-WK9Q/videos"><img
                     src="https://i.pinimg.com/originals/20/9b/d8/209bd859c265e7ffc4bfeb75877b23f7.png" alt="youtube"
                     width="55" height="55"> </a>
-            <a href="#"><img src="https://i.pinimg.com/originals/ca/24/1b/ca241b8daf67ebf7f2d902104620d3f4.png"
+            <a href="https://www.instagram.com/cristv1236/"><img src="https://i.pinimg.com/originals/ca/24/1b/ca241b8daf67ebf7f2d902104620d3f4.png"
                     alt="instagram" width="50" height="50"></a>
         </div>
     </div>
