cambios a la api
fracaso total

--- a/pagina-web/src/app/seccionayuda/seccionayuda.component.css
+++ b/pagina-web/src/app/seccionayuda/seccionayuda.component.css
@@ -47,3 +47,16 @@ body {
     display: flex;
   }
  
+  .izquierdaarriba{
+    height: 49;
+    width: 49%;
+  }
+  
+  .derechaarriba{
+    background-size: cover;
+    background-position: center;
+    height: 49;
+    width: 49%;
+  }
+  
+  
