--- a/pagina-web/src/app/app.component.html
+++ b/pagina-web/src/app/app.component.html
@@ -9,7 +9,7 @@
         <ul>
             <li><a [routerLink]="['inicio']">Inicio</a></li>
             <li><a href="#">Paquetes</a></li>
-            <li><a href="#">Community</a></li>
+            <li><a href="https://ebotics.com/es/producto/kit-makermania-crocplay/">Community</a></li>
             <li><a [routerLink]="['seccionayuda']">Ayuda</a></li>
             <li><a [routerLink]="['Sobrenosotros']">Acerca de nosotros</a></li>
             <li class="buscador">
