--- a/pagina-web/src/app/app.component.css
+++ b/pagina-web/src/app/app.component.css
@@ -1,247 +1,254 @@
+*{
+
+  font-family: sans-serif;
+}
 #main-header {
-    background: rgb(51, 51, 51);
-    color: white;
-    height: 90px;
-    position:relative;
-    
+  background: rgb(51, 51, 51);
+  color: white;
+  height: 90px;
+  position:relative;
+  
 }
 
 #main-header a {
-    color: white;
+  color: white;
 }
 
 /*
- * Logo
- */
+* Logo
+*/
 #logo-header {
-    float: left;
-    padding: 15px 0 0 20px;
-    text-decoration: none;
+  float: left;
+  padding: 15px 0 0 20px;
+  text-decoration: none;
 }
 
 #logo-header:hover {
-    color: #0b76a6;
+  color: #0b76a6;
 }
 
 #logo-header .site-name {
-    display: block;
-    font-weight: 700;
-    font-size: 1.7em;
+  display: block;
+  font-weight: 700;
+  font-size: 1.7em;
+
+  font-family: cursive;
 }
 
 #logo-header .site-desc {
-    display: block;
-    font-weight: 300;
-    font-size: 1.3em;
-    color: #999;
+  display: block;
+  font-weight: 300;
+  font-size: 1.3em;
+  color: #999;
+  
 }
 
 
 /*
- * Navegación
- */
+* Navegación
+*/
 nav {
-    float: right;
+  float: right;
 }
 
 nav ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    padding-right: 100px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  padding-right: 100px;
 }
 
 nav ul li {
-    display: inline-block;
-    line-height: 80px;
+  display: inline-block;
+  line-height: 80px;
 }
 
 nav ul li a {
-    display: block;
-    padding: 0 30px;
-    text-decoration: none;
+  display: block;
+  padding: 0 30px;
+  text-decoration: none;
 }
 
 nav ul li a:hover {
-    background: #0b76a6;
+  background: #0b76a6;
 }
 
 buscar{
-    float: right;
+  float: right;
 }
 buscar
 nav ul div.buscador {
-    margin: 100px auto;
-    width: 300px;
-    height: 50px;
+  margin: 100px auto;
+  width: 300px;
+  height: 50px;
 }
 
 .main-container{
-    margin-top: 5%;
+  margin-top: 5%;
 }
 
 
 .site-footer
 {
-  background-color:#26272b;
-  padding:45px 0 20px;
-  font-size:15px;
-  line-height:24px;
-  color:#737373;
+background-color:#26272b;
+padding:45px 0 20px;
+font-size:15px;
+line-height:24px;
+color:#737373;
 }
 .site-footer hr
 {
-  border-top-color:#bbb;
-  opacity:0.5
+border-top-color:#bbb;
+opacity:0.5
 }
 .site-footer hr.small
 {
-  margin:20px 0
+margin:20px 0
 }
 .site-footer h6
 {
-  color:#fff;
-  font-size:16px;
-  text-transform:uppercase;
-  margin-top:5px;
-  letter-spacing:2px
+color:#fff;
+font-size:16px;
+text-transform:uppercase;
+margin-top:5px;
+letter-spacing:2px
 }
 .site-footer a
 {
-  color:#737373;
+color:#737373;
 }
 .site-footer a:hover
 {
-  color:#3366cc;
-  text-decoration:none;
+color:#3366cc;
+text-decoration:none;
 }
 .footer-links
 {
-  padding-left:0;
-  list-style:none
+padding-left:0;
+list-style:none
 }
 .footer-links li
 {
-  display:block
+display:block
 }
 .footer-links a
 {
-  color:#737373
+color:#737373
 }
 .footer-links a:active,.footer-links a:focus,.footer-links a:hover
 {
-  color:#3366cc;
-  text-decoration:none;
+color:#3366cc;
+text-decoration:none;
 }
 .footer-links.inline li
 {
-  display:inline-block
+display:inline-block
 }
 .site-footer .social-icons
 {
-  text-align:right
+text-align:right
 }
 .site-footer .social-icons a
 {
-  width:40px;
-  height:40px;
-  line-height:40px;
-  margin-left:6px;
-  margin-right:0;
-  border-radius:100%;
-  background-color:#33353d
+width:40px;
+height:40px;
+line-height:40px;
+margin-left:6px;
+margin-right:0;
+border-radius:100%;
+background-color:#33353d
 }
 .copyright-text
 {
-  margin:0
+margin:0
 }
 @media (max-width:991px)
 {
-  .site-footer [class^=col-]
-  {
-    margin-bottom:30px
-  }
+.site-footer [class^=col-]
+{
+  margin-bottom:30px
+}
 }
 @media (max-width:767px)
 {
-  .site-footer
-  {
-    padding-bottom:0
-  }
-  .site-footer .copyright-text,.site-footer .social-icons
-  {
-    text-align:center
-  }
+.site-footer
+{
+  padding-bottom:0
+}
+.site-footer .copyright-text,.site-footer .social-icons
+{
+  text-align:center
+}
 }
 .social-icons
 {
-  padding-left:0;
-  margin-bottom:0;
-  list-style:none
+padding-left:0;
+margin-bottom:0;
+list-style:none
 }
 .social-icons li
 {
-  display:inline-block;
-  margin-bottom:4px
+display:inline-block;
+margin-bottom:4px
 }
 .social-icons li.title
 {
-  margin-right:15px;
-  text-transform:uppercase;
-  color:#96a2b2;
-  font-weight:700;
-  font-size:13px
+margin-right:15px;
+text-transform:uppercase;
+color:#96a2b2;
+font-weight:700;
+font-size:13px
 }
 .social-icons a{
-  background-color:#eceeef;
-  color:#818a91;
-  font-size:16px;
-  display:inline-block;
-  line-height:44px;
-  width:44px;
-  height:44px;
-  text-align:center;
-  margin-right:8px;
-  border-radius:100%;
-  -webkit-transition:all .2s linear;
-  -o-transition:all .2s linear;
-  transition:all .2s linear
+background-color:#eceeef;
+color:#818a91;
+font-size:16px;
+display:inline-block;
+line-height:44px;
+width:44px;
+height:44px;
+text-align:center;
+margin-right:8px;
+border-radius:100%;
+-webkit-transition:all .2s linear;
+-o-transition:all .2s linear;
+transition:all .2s linear
 }
 .social-icons a:active,.social-icons a:focus,.social-icons a:hover
 {
-  color:#fff;
-  background-color:#29aafe
+color:#fff;
+background-color:#29aafe
 }
 .social-icons.size-sm a
 {
-  line-height:34px;
-  height:34px;
-  width:34px;
-  font-size:14px
+line-height:34px;
+height:34px;
+width:34px;
+font-size:14px
 }
 .social-icons a.facebook:hover
 {
-  background-color:#3b5998
+background-color:#3b5998
 }
 .social-icons a.twitter:hover
 {
-  background-color:#00aced
+background-color:#00aced
 }
 .social-icons a.linkedin:hover
 {
-  background-color:#007bb6
+background-color:#007bb6
 }
 .social-icons a.dribbble:hover
 {
-  background-color:#ea4c89
+background-color:#ea4c89
 }
 @media (max-width:767px)
 {
-  .social-icons li.title
-  {
-    display:block;
-    margin-right:0;
-    font-weight:600
-  }
+.social-icons li.title
+{
+  display:block;
+  margin-right:0;
+  font-weight:600
+}
 }
 
