--- a/pagina-web/src/app/Ejemplos productos/productcinco/productcinco.component.html
+++ b/pagina-web/src/app/Ejemplos productos/productcinco/productcinco.component.html
@@ -1,1 +1,55 @@
-<p>productcinco works!</p>
+<section id="pantalladiv">
+    <div class="izquierdaarriba">
+        <img src="https://m.media-amazon.com/images/I/5128rVjF6WL._SX342_.jpg
+        " width="500" height="400" />
+    </div>
+
+    <div class="derechaarriba">
+        <h1>PoiLee 1N5408 - 30 unidades de diodos de 3 A 1000 V DO-27 Axial 5408 IN5408 3 A 1000 V de silicona
+            electrónica</h1>
+        <h5>Descripcion.</h5>
+        <h5> Los diodos tienen una polaridad determinada por un ánodo (terminal positivo) y un cátodo (terminal
+            negativo). La mayoría de los diodos permiten que la corriente fluya solo cuando se aplica tensión al ánodo
+            positivo.
+        </h5>
+        <li>Número de pieza: 1N5408 / Corriente de avanzada: 3 A / Pico de repetición de Maxixum Voltaje: 1000 V
+            Sin plomo, compatible con RoHS.</li>
+        <li>Componente electrónico, carcasa de plástico moldeado, cables axiales chapados y agujero a través del
+            agujero.</li>
+        <li>Bajas fugas inversas / alta capacidad de corriente avanzada / soldadura de alta temperatura.</li>
+        <h3>1.50$ MXN</h3>
+        <button class="menos">-</button>
+        <input type="text" size="1" maxlength="30" value="1" name="nombre">
+        <button class="mass">+</button>
+        <button class="button">Agregar al carrito</button>
+    </div>
+</section>
+
+<div class="paginanombredos">
+    <h3>Mas componentes que te pueden interesar.</h3>
+</div>
+<div class="arriba">
+    <div class="uno">
+        <a href="Batería de Litio 3 V CR2477"><img src="https://cdn.shopify.com/s/files/1/0409/9041/products/1_0c76906a-1e95-4a31-98f4-7a1ccef32ce2_grande.png?v=1587136738
+            " alt="facebook" width="150" height="150"></a>
+        <h4>Batería de Litio 3 V CR2477</h4>
+    </div>
+
+    <div class="uno">
+        <a href="PROTOBOARD CHICA 400 PUNTOS"><img src="https://cdn.shopify.com/s/files/1/1040/8806/products/photo_OS-00005_ProtoboardChica_400p_01_700x700.png?v=1595434654
+            " alt="facebook" width="150" height="150"></a>
+        <h4>PROTOBOARD CHICA 400 PUNTOS</h4>
+    </div>
+
+    <div class="uno">
+        <a href="PROTOBOARD GRANDE 800 PUNTOS"><img src="https://cdn.shopify.com/s/files/1/1040/8806/products/photo_OS-00008_Proto_Grande_Blanca_10_700x700.png?v=1600808942
+            " alt="facebook" width="150" height="150"></a>
+        <h4>PROTOBOARD GRANDE 800 PUNTOS</h4>
+    </div>
+    <div class="tres">
+        <a href="Arduino UNO R3 [A000066] Placa de microcontrolador"><img src="https://m.media-amazon.com/images/I/71z22cRPeeL.jpg" width="150"
+            height="150"></a>
+    <h4>Arduino UNO R3 [A000066] </h4>
+    </div>
+
+</div>
