--- a/pagina-web/src/app/Ejemplos productos/productocho/productocho.component.html
+++ b/pagina-web/src/app/Ejemplos productos/productocho/productocho.component.html
@@ -1,1 +1,54 @@
-<p>productocho works!</p>
+<section id="pantalladiv">
+    <div class="izquierdaarriba">
+        <img src="https://cdn.shopify.com/s/files/1/0409/9041/products/z_948cbf72-8547-4eca-a18b-913ef596bd46_grande.png?v=1642180473
+        " width="500" height="400" />
+    </div>
+
+    <div class="derechaarriba">
+        <h1>Cerradura Electrónica Solenoide 12 V para Puerta</h1>
+        <h5>Descripcion.</h5>
+        <h5> Esta cerradura eléctrica da la seguridad y la estabilidad para su uso, es de bajo consumo y es muy útil para cerrar lugar donde requieras proteger objetos de valor, es fácil de instalar ya sea en un sistema de cierre automático o de control solo es necesario suministrar un voltaje de 12 V para contraer el solenoide y este pueda permitir abrir la puerta.
+            La cerradura electrónica no es más que una evolución de la mecánica, aquella que todos conocemos por tener cilindro, pestillo, resbalón, engranajes, etc. No obstante la diferencia se encuentra en su mecanismo, que ya no es “mecánico” como tal, sino electrónico esto quiere decir que ya no hace falta una llave que accione el mecanismo por lo que la gran ventaja de este tipo de cerraduras es el control de acceso que proporcionan limitado y de alta seguridad ya que solo se pueden activar con personas autorizadas que el sistema reconoce como aptas.            
+        </h5>
+        <li>Con orificios para sujetar.</li>
+        <li>Conector con 2 cables.</li>
+        <li>El pestillo puede ser cambiado a la dirección que se necesite.</li>
+        <li>Diseñado con el tipo de estructura abierta.</li>
+        <li>Cables polarizados rojo (+) y negro (-).</li>
+        <li>Tiempo de desbloqueo: 1 segundo, encendido continuo menor a 10 segundos. </li>
+        <h3>42.95$ MXN</h3>
+        <button class="menos">-</button>
+        <input type="text" size="1" maxlength="30" value="1" name="nombre">
+        <button class="mass">+</button>
+        <button class="button">Agregar al carrito</button>
+    </div>
+</section>
+
+<div class="paginanombredos">
+    <h3>Mas componentes que te pueden interesar.</h3>
+</div>
+<div class="arriba">
+    <div class="uno">
+        <a href="Batería de Litio 3 V CR2477"><img src="https://cdn.shopify.com/s/files/1/0409/9041/products/1_0c76906a-1e95-4a31-98f4-7a1ccef32ce2_grande.png?v=1587136738
+            " alt="facebook" width="150" height="150"></a>
+        <h4>Batería de Litio 3 V CR2477</h4>
+    </div>
+
+    <div class="uno">
+        <a href="PROTOBOARD CHICA 400 PUNTOS"><img src="https://cdn.shopify.com/s/files/1/1040/8806/products/photo_OS-00005_ProtoboardChica_400p_01_700x700.png?v=1595434654
+            " alt="facebook" width="150" height="150"></a>
+        <h4>PROTOBOARD CHICA 400 PUNTOS</h4>
+    </div>
+
+    <div class="uno">
+        <a href="PROTOBOARD GRANDE 800 PUNTOS"><img src="https://cdn.shopify.com/s/files/1/1040/8806/products/photo_OS-00008_Proto_Grande_Blanca_10_700x700.png?v=1600808942
+            " alt="facebook" width="150" height="150"></a>
+        <h4>PROTOBOARD GRANDE 800 PUNTOS</h4>
+    </div>
+    <div class="tres">
+        <a href="Arduino UNO R3 [A000066] Placa de microcontrolador"><img src="https://m.media-amazon.com/images/I/71z22cRPeeL.jpg" width="150"
+            height="150"></a>
+    <h4>Arduino UNO R3 [A000066] </h4>
+    </div>
+
+</div>
