--- a/pagina-web/src/app/Ejemplos productos/productodoce/productodoce.component.html
+++ b/pagina-web/src/app/Ejemplos productos/productodoce/productodoce.component.html
@@ -1,23 +1,21 @@
 <section id="pantalladiv">
     <div class="izquierdaarriba">
-        <img src="https://cdn.shopify.com/s/files/1/1040/8806/products/photo_OS-00008_Proto_Grande_Blanca_10_700x700.png?v=1600808942
+        <img src="https://cdn.shopify.com/s/files/1/0409/9041/products/6soic_62f818c0-766c-47f0-8575-072c9af85a29_grande.png?v=1623945227
         " width="500" height="400" />
     </div>
 
     <div class="derechaarriba">
-        <h1>PROTOBOARD GRANDE 800 PUNTOS</h1>
+        <h1>2SD1384 Pequeña Señal</h1>
         <h5>Descripcion.</h5>
-        <h5>Con nuestros Protoboards puedes conseguir armar con facilidad un circuito o proyecto electrónico sin
-            necesidad de realizar soldaduras, para que hagas todas las pruebas necesarias antes de comenzar con tus
-            proyectos electrónicos.
+        <h5> El Transistor 2SC5395 de pequeña señal  con cinta de alimentación diseñado para su uso en aplicaciones de máquina automática de colocación.
         </h5>
-        <li>Dimensiones: 6.5 x 2.1 x 0.38 "(165.1 x 54.29 x 9.68 mm).</li>
-        <li>2 buses de alimentación.</li>
-        <li>10 columnas y 63 filas, con un total de 830 puntos de empate.</li>
-        <li>Todos los pines están espaciados por un estándar de 0.1.</li>
-        <li>Los dos conjuntos de cinco columnas están separados por aproximadamente 0.3.</li>
-        <li>La placa acepta tamaños de cable en el rango de 20-29 AWG.</li>
-        <h3>169.00$ MXN</h3>
+        <li>Polaridad: NPN.</li>
+        <li>Voltaje colector base VCBO: 40 V.</li>
+        <li>Voltaje de colector emisor VCEO32 V.</li>
+        <li>Corriente continua Ic: 2 A.</li>
+        <li>Corriente pulsada: 2.5 A.</li>
+        <li>Voltaje emisor base VEBO: 5 V.</li>
+        <h3>3.00$ MXN</h3>
         <button class="menos">-</button>
         <input type="text" size="1" maxlength="30" value="1" name="nombre">
         <button class="mass">+</button>
