--- a/pagina-web/src/app/Ejemplos productos/productoonce/productoonce.component.html
+++ b/pagina-web/src/app/Ejemplos productos/productoonce/productoonce.component.html
@@ -1,23 +1,21 @@
 <section id="pantalladiv">
     <div class="izquierdaarriba">
-        <img src="https://cdn.shopify.com/s/files/1/1040/8806/products/photo_OS-00008_Proto_Grande_Blanca_10_700x700.png?v=1600808942
+        <img src="https://cdn.shopify.com/s/files/1/0409/9041/products/16pines_fb43ac7d-db92-48e2-89eb-7cb223ed8017_grande.png?v=1611246712
         " width="500" height="400" />
     </div>
 
     <div class="derechaarriba">
-        <h1>PROTOBOARD GRANDE 800 PUNTOS</h1>
+        <h1>74HC148N CMOS Codificador Octal 8 a 3 Lineas</h1>
         <h5>Descripcion.</h5>
-        <h5>Con nuestros Protoboards puedes conseguir armar con facilidad un circuito o proyecto electrónico sin
-            necesidad de realizar soldaduras, para que hagas todas las pruebas necesarias antes de comenzar con tus
-            proyectos electrónicos.
+        <h5> El SN74HC148N es un codificador de prioridad de 8 a 3 líneas que cuenta con una decodificación de prioridad de las entradas para garantizar que sólo se codifica la línea de datos de orden más alto. Las entradas y salidas de datos están activas en el nivel lógico bajo.
         </h5>
-        <li>Dimensiones: 6.5 x 2.1 x 0.38 "(165.1 x 54.29 x 9.68 mm).</li>
-        <li>2 buses de alimentación.</li>
-        <li>10 columnas y 63 filas, con un total de 830 puntos de empate.</li>
-        <li>Todos los pines están espaciados por un estándar de 0.1.</li>
-        <li>Los dos conjuntos de cinco columnas están separados por aproximadamente 0.3.</li>
-        <li>La placa acepta tamaños de cable en el rango de 20-29 AWG.</li>
-        <h3>169.00$ MXN</h3>
+        <li>Las salidas pueden conducir hasta 10 cargas LSTTL.</li>
+        <li>± 4mA Accionamiento de salida a 5V.</li>
+        <li>Codificar 8 datos a 3 líneas binarias.</li>
+        <li>Tipo circuito lógico: Enclavador de fase ajustable.</li>
+        <li>Encapsulado: DIP.</li>
+        <li>Aplicaciones: Industrial, comunicaciones y red.</li>
+        <h3>29.90$ MXN</h3>
         <button class="menos">-</button>
         <input type="text" size="1" maxlength="30" value="1" name="nombre">
         <button class="mass">+</button>
