--- a/pagina-web/src/app/Ejemplos productos/productseis/productseis.component.html
+++ b/pagina-web/src/app/Ejemplos productos/productseis/productseis.component.html
@@ -1,1 +1,62 @@
-<p>productseis works!</p>
+<section id="pantalladiv">
+    <div class="izquierdaarriba">
+        <img src="https://m.media-amazon.com/images/I/61tpP1An-RL._SX342_.jpg
+        " width="500" height="400" />
+    </div>
+
+    <div class="derechaarriba">
+        <h1>Mxuteuk - Mini interruptor de palanca en miniatura para consola de auto, encendido/apagado, encendido/encendido, (encendido/apagado/encendido) (se puede elegir), 6 A, 125 V, 3 A, 250 V.</h1>
+        <h5>Descripcion.</h5>
+        <h5>Un interruptor eléctrico es en su acepción más básica un dispositivo que permite desviar o interrumpir el
+            curso de una corriente eléctrica. En el mundo moderno sus tipos y aplicaciones son innumerables, van desde
+            un simple interruptor que apaga o enciende una bombilla, hasta un complicado selector de transferencia
+            automático de múltiples capas, controlado por computadora. Su expresión más sencilla consiste en dos
+            contactos de metal inoxidable y el actuante. Los contactos, normalmente separados, se unen mediante un
+            actuante para permitir que la corriente circule. El actuante es la parte móvil que en una de sus posiciones
+            hace presión sobre los contactos para mantenerlos unidos.
+        </h5>
+        <li>Contenido del paquete: 8 minipalancas en miniatura.</li>
+        <li>Diámetro del orificio de montaje: 0.236 in. Tamaño total (aprox.): 0.512 x 0.276 x 1.260 in.</li>
+        <li>Número de pines: 2 pines; posición: 2 posiciones (encendido/apagado); tipo: SPST; potencia: 6 A 125 VAC / 3
+            A 250 VAC</li>
+        <li>Vida mecánica: más de 50.000 ciclos. Vida eléctrica: más de 10.000 ciclos.</li>
+        <li>Interruptores de palanca en miniatura adecuados para montaje en panel con una acción fiable que los hace
+            adecuados para una amplia gama de aplicaciones.</li>
+            <h3>132.60$ MXN</h3>
+        <button class="menos">-</button>
+        <input type="text" size="1" maxlength="30" value="1" name="nombre">
+        <button class="mass">+</button>
+        <button class="button">Agregar al carrito</button>
+    </div>
+</section>
+
+<div class="paginanombredos">
+    <h3>Mas componentes que te pueden interesar.</h3>
+</div>
+<div class="arriba">
+    <div class="uno">
+        <a href="Cable Dupont Macho-Macho 30cm"><img
+            src="https://elecan3d.com/995-large_default/cable-dupont-macho-macho-30cm.jpg" alt="facebook"
+            width="150" height="150"></a>
+    <h4>Cable Dupont Macho-Macho 30cm</h4>
+    </div>
+
+    <div class="uno">
+        <a href="PoiLee 1N5408 - 30 unidades de diodos"><img
+            src="https://m.media-amazon.com/images/I/5128rVjF6WL._SX342_.jpg" alt="facebook"
+            width="150" height="150"></a>
+    <h4>PoiLee 1N5408 - 30 unidades de diodos de 3 A 1000 V</h4>
+    </div>
+
+    <div class="uno">
+        <a href="PROTOBOARD GRANDE 800 PUNTOS"><img src="https://cdn.shopify.com/s/files/1/1040/8806/products/photo_OS-00008_Proto_Grande_Blanca_10_700x700.png?v=1600808942
+            " alt="facebook" width="150" height="150"></a>
+        <h4>PROTOBOARD GRANDE 800 PUNTOS</h4>
+    </div>
+    <div class="tres">
+        <a href="Mxuteuk - Mini interruptor"><img src="https://m.media-amazon.com/images/I/61tpP1An-RL._SX342_.jpg
+            " alt="facebook" width="150" height="150"></a>
+        <h4>Mxuteuk - Mini interruptor de palanca</h4>
+    </div>
+
+</div>
