--- a/pagina-web/src/app/Ejemplos productos/productsiete/productsiete.component.html
+++ b/pagina-web/src/app/Ejemplos productos/productsiete/productsiete.component.html
@@ -1,1 +1,63 @@
-<p>productsiete works!</p>
+<section id="pantalladiv">
+    <div class="izquierdaarriba">
+        <img src="https://cdn.shopify.com/s/files/1/0409/9041/products/1_0c76906a-1e95-4a31-98f4-7a1ccef32ce2_grande.png?v=1587136738
+        " width="500" height="400" />
+    </div>
+
+    <div class="derechaarriba">
+        <h1>Batería de Litio 3 V CR2477</h1>
+        <h5>Descripcion.</h5>
+        <h5> La batería de iones de litio, también denominada batería Li-Ion, es un dispositivo diseñado para
+            almacenamiento de energía eléctrica que emplea como electro-lito, una sal de litio que procura los iones
+            necesarios para la reacción electro química reversible que tiene lugar entre el cátodo y el ánodo. Las
+            propiedades de las baterías de Li-ion, como la ligereza de sus componentes, su elevada capacidad energética
+            y resistencia a la descarga, junto con el poco efecto memoria que sufren o su capacidad para funcionar con
+            un elevado número de ciclos de regeneración, han permitido el diseño de acumuladores livianos, de pequeño
+            tamaño y variadas formas, con un alto rendimiento, especialmente adaptados a las aplicaciones de la
+            industria electrónica de gran consumo generalmente usada para relojes, cámaras digitales, calculadoras o
+            cualquier aparato electrónico que cumpla estas características.
+        </h5>
+        <li>Cuenta con polaridad marcada.</li>
+        <li>Fácil de instalar.</li>
+        <li>Aplicaciones: Suministro de energía.</li>
+        <li>Tipo de batería: No recargable.</li>
+        <li>Capacidad nominal: 950 mAh.</li>
+        <li>Voltaje de la batería: 3 V.</li>
+        <h3>35.00$ MXN</h3>
+        <button class="menos">-</button>
+        <input type="text" size="1" maxlength="30" value="1" name="nombre">
+        <button class="mass">+</button>
+        <button class="button">Agregar al carrito</button>
+    </div>
+</section>
+
+<div class="paginanombredos">
+    <h3>Mas componentes que te pueden interesar.</h3>
+</div>
+<div class="arriba">
+    <div class="uno">
+        <a href="PoiLee 1N5408 - 30 unidades de diodos"><img
+            src="https://m.media-amazon.com/images/I/5128rVjF6WL._SX342_.jpg" alt="facebook"
+            width="150" height="150"></a>
+    <h4>PoiLee 1N5408 - 30 unidades de diodos de 3 A 1000 V</h4>
+    </div>
+
+    <div class="uno">
+        <a href="2SD1384 Pequeña Señal"><img src="https://cdn.shopify.com/s/files/1/0409/9041/products/6soic_62f818c0-766c-47f0-8575-072c9af85a29_grande.png?v=1623945227" width="150"
+            height="150"></a>
+    <h4>2SD1384 Pequeña Señal</h4>
+    </div>
+
+    <div class="uno">
+        <a href="Cerradura Electrónica Solenoide 12 V para Puerta"><img src="https://cdn.shopify.com/s/files/1/0409/9041/products/z_948cbf72-8547-4eca-a18b-913ef596bd46_grande.png?v=1642180473" width="150"
+            height="150"></a>
+    <h4>Cerradura Electrónica Solenoide 12 V para Puerta</h4>
+    </div>
+    <div class="tres">
+        <a href="Cable Dupont Macho-Macho 30cm"><img
+            src="https://elecan3d.com/995-large_default/cable-dupont-macho-macho-30cm.jpg" alt="facebook"
+            width="150" height="150"></a>
+    <h4>Cable Dupont Macho-Macho 30cm</h4>
+    </div>
+
+</div>
