--- a/pagina-web/src/app/Ejemplos productos/producttres/producttres.component.html
+++ b/pagina-web/src/app/Ejemplos productos/producttres/producttres.component.html
@@ -20,6 +20,7 @@
         <li>Todos los pines están espaciados por un estándar de 0.1.</li>
         <li>Los dos conjuntos de cinco columnas están separados por aproximadamente 0.3.</li>
         <li>La placa acepta tamaños de cable en el rango de 20-29 AWG.</li>
+        <h3>73.45$ MXN</h3>
         <button class="menos">-</button>
         <input type="text" size="1" maxlength="30" value="1" name="nombre">
         <button class="mass">+</button>
@@ -32,26 +33,28 @@
 </div>
 <div class="arriba">
     <div class="uno">
-        <a href="ProductoUno"><img src="https://m.media-amazon.com/images/I/71z22cRPeeL.jpg" width="150"
-                height="150"></a>
-        <h4>Arduino UNO R3 [A000066] Placa de microcontrolador</h4>
+        <a href="Cable Dupont Macho-Macho 30cm"><img
+            src="https://elecan3d.com/995-large_default/cable-dupont-macho-macho-30cm.jpg" alt="facebook"
+            width="150" height="150"></a>
+    <h4>Cable Dupont Macho-Macho 30cm</h4>
     </div>
 
     <div class="uno">
-        <a href="Productodos"><img src="https://cdn.shopify.com/s/files/1/1040/8806/products/photo_OS-00008_Proto_Grande_Blanca_10_700x700.png?v=1600808942
-                " alt="facebook" width="150" height="150"></a>
+        <a href="PoiLee 1N5408 - 30 unidades de diodos"><img
+            src="https://m.media-amazon.com/images/I/5128rVjF6WL._SX342_.jpg" alt="facebook"
+            width="150" height="150"></a>
+    <h4>PoiLee 1N5408 - 30 unidades de diodos de 3 A 1000 V</h4>
+    </div>
+
+    <div class="uno">
+        <a href="PROTOBOARD GRANDE 800 PUNTOS"><img src="https://cdn.shopify.com/s/files/1/1040/8806/products/photo_OS-00008_Proto_Grande_Blanca_10_700x700.png?v=1600808942
+            " alt="facebook" width="150" height="150"></a>
         <h4>PROTOBOARD GRANDE 800 PUNTOS</h4>
     </div>
-
-    <div class="uno">
-        <a href="Productotres"><img src="https://cdn.shopify.com/s/files/1/1040/8806/products/photo_OS-00005_ProtoboardChica_400p_01_700x700.png?v=1595434654
-                " alt="facebook" width="150" height="150"></a>
-        <h4>PROTOBOARD CHICA 400 PUNTOS</h4>
-    </div>
     <div class="tres">
-        <a href="Productocuatro"><img src="https://elecan3d.com/995-large_default/cable-dupont-macho-macho-30cm.jpg"
-                alt="facebook" width="150" height="150"></a>
-        <h4>Cable Dupont Macho-Macho 30cm</h4>
+        <a href="Mxuteuk - Mini interruptor"><img src="https://m.media-amazon.com/images/I/61tpP1An-RL._SX342_.jpg
+            " alt="facebook" width="150" height="150"></a>
+        <h4>Mxuteuk - Mini interruptor de palanca</h4>
     </div>
 
 </div>
