--- a/pagina-web/src/app/Ejemplos productos/productuno/productuno.component.html
+++ b/pagina-web/src/app/Ejemplos productos/productuno/productuno.component.html
@@ -20,6 +20,7 @@
         <li>Una conexión USB.</li>
         <li>Un conector de alimentación.</li>
         <li>Un encabezado ICSP y un botón de reinicio.</li>
+        <h3>240.10$ MXN</h3>
         <button class="menos">-</button>
         <input type="text" size="1" maxlength="30" value="1" name="nombre">
         <button class="mass">+</button>
@@ -32,28 +33,26 @@
 </div>
 <div class="arriba">
     <div class="uno">
-        <a href="ProductoUno"><img
-                src="https://m.media-amazon.com/images/I/71z22cRPeeL.jpg" width="150"
-                height="150"></a>
-        <h4>Arduino UNO R3 [A000066] Placa de microcontrolador</h4>
+        <a href="Batería de Litio 3 V CR2477"><img src="https://cdn.shopify.com/s/files/1/0409/9041/products/1_0c76906a-1e95-4a31-98f4-7a1ccef32ce2_grande.png?v=1587136738
+            " alt="facebook" width="150" height="150"></a>
+        <h4>Batería de Litio 3 V CR2477</h4>
     </div>
 
     <div class="uno">
-        <a href="Productodos"><img src="https://cdn.shopify.com/s/files/1/1040/8806/products/photo_OS-00008_Proto_Grande_Blanca_10_700x700.png?v=1600808942
-                " alt="facebook" width="150" height="150"></a>
-        <h4>PROTOBOARD GRANDE 800 PUNTOS</h4>
-    </div>
-
-    <div class="uno">
-        <a href="Productotres"><img src="https://cdn.shopify.com/s/files/1/1040/8806/products/photo_OS-00005_ProtoboardChica_400p_01_700x700.png?v=1595434654
-                " alt="facebook" width="150" height="150"></a>
+        <a href="PROTOBOARD CHICA 400 PUNTOS"><img src="https://cdn.shopify.com/s/files/1/1040/8806/products/photo_OS-00005_ProtoboardChica_400p_01_700x700.png?v=1595434654
+            " alt="facebook" width="150" height="150"></a>
         <h4>PROTOBOARD CHICA 400 PUNTOS</h4>
     </div>
+
+    <div class="uno">
+        <a href="PROTOBOARD GRANDE 800 PUNTOS"><img src="https://cdn.shopify.com/s/files/1/1040/8806/products/photo_OS-00008_Proto_Grande_Blanca_10_700x700.png?v=1600808942
+            " alt="facebook" width="150" height="150"></a>
+        <h4>PROTOBOARD GRANDE 800 PUNTOS</h4>
+    </div>
     <div class="tres">
-        <a href="Productocuatro"><img
-                src="https://elecan3d.com/995-large_default/cable-dupont-macho-macho-30cm.jpg" alt="facebook"
-                width="150" height="150"></a>
-        <h4>Cable Dupont Macho-Macho 30cm</h4>
+        <a href="Arduino UNO R3 [A000066] Placa de microcontrolador"><img src="https://m.media-amazon.com/images/I/71z22cRPeeL.jpg" width="150"
+            height="150"></a>
+    <h4>Arduino UNO R3 [A000066] </h4>
     </div>
 
 </div>
