--- a/pagina-web/src/app/index/index.component.html
+++ b/pagina-web/src/app/index/index.component.html
@@ -8,30 +8,93 @@
         </div>
         <div class="arriba" id="arriba">
             <div class="uno">
-                <a href="ProductoUno"><img src="https://m.media-amazon.com/images/I/71z22cRPeeL.jpg" width="150"
+                <a href="Arduino UNO R3 [A000066] Placa de microcontrolador"><img src="https://m.media-amazon.com/images/I/71z22cRPeeL.jpg" width="150"
                         height="150"></a>
-                <h4>Arduino UNO R3 [A000066] Placa de microcontrolador</h4>
+                <h4>Arduino UNO R3 [A000066] </h4>
             </div>
 
             <div class="uno">
-                <a href="Productodos"><img src="https://cdn.shopify.com/s/files/1/1040/8806/products/photo_OS-00008_Proto_Grande_Blanca_10_700x700.png?v=1600808942
+                <a href="PROTOBOARD GRANDE 800 PUNTOS"><img src="https://cdn.shopify.com/s/files/1/1040/8806/products/photo_OS-00008_Proto_Grande_Blanca_10_700x700.png?v=1600808942
                     " alt="facebook" width="150" height="150"></a>
                 <h4>PROTOBOARD GRANDE 800 PUNTOS</h4>
             </div>
 
             <div class="uno">
-                <a href="Productotres"><img src="https://cdn.shopify.com/s/files/1/1040/8806/products/photo_OS-00005_ProtoboardChica_400p_01_700x700.png?v=1595434654
+                <a href="PROTOBOARD CHICA 400 PUNTOS"><img src="https://cdn.shopify.com/s/files/1/1040/8806/products/photo_OS-00005_ProtoboardChica_400p_01_700x700.png?v=1595434654
                     " alt="facebook" width="150" height="150"></a>
                 <h4>PROTOBOARD CHICA 400 PUNTOS</h4>
             </div>
             <div class="tres">
-                <a href="Productocuatro"><img
+                <a href="Cable Dupont Macho-Macho 30cm"><img
                         src="https://elecan3d.com/995-large_default/cable-dupont-macho-macho-30cm.jpg" alt="facebook"
                         width="150" height="150"></a>
                 <h4>Cable Dupont Macho-Macho 30cm</h4>
             </div>
 
         </div>
+        
+        
+    </div>
+    <div>
+        <div class="arriba" id="arriba">
+            <div class="uno">
+                <a href="Cerradura Electrónica Solenoide 12 V para Puerta"><img src="https://cdn.shopify.com/s/files/1/0409/9041/products/z_948cbf72-8547-4eca-a18b-913ef596bd46_grande.png?v=1642180473" width="150"
+                        height="150"></a>
+                <h4>Cerradura Electrónica Solenoide 12 V para Puerta</h4>
+            </div>
+
+            <div class="uno">
+                <a href="Batería de Litio 3 V CR2477"><img src="https://cdn.shopify.com/s/files/1/0409/9041/products/1_0c76906a-1e95-4a31-98f4-7a1ccef32ce2_grande.png?v=1587136738
+                    " alt="facebook" width="150" height="150"></a>
+                <h4>Batería de Litio 3 V CR2477</h4>
+            </div>
+
+            <div class="uno">
+                <a href="Mxuteuk - Mini interruptor"><img src="https://m.media-amazon.com/images/I/61tpP1An-RL._SX342_.jpg
+                    " alt="facebook" width="150" height="150"></a>
+                <h4>Mxuteuk - Mini interruptor de palanca</h4>
+            </div>
+            <div class="tres">
+                <a href="PoiLee 1N5408 - 30 unidades de diodos"><img
+                        src="https://m.media-amazon.com/images/I/5128rVjF6WL._SX342_.jpg" alt="facebook"
+                        width="150" height="150"></a>
+                <h4>PoiLee 1N5408 - 30 unidades de diodos de 3 A 1000 V</h4>
+            </div>
+
+        </div>
+        
+        
+    </div>
+    <div>
+        <div class="arriba" id="arriba">
+            <div class="uno">
+                <a href="2SD1384 Pequeña Señal"><img src="https://cdn.shopify.com/s/files/1/0409/9041/products/6soic_62f818c0-766c-47f0-8575-072c9af85a29_grande.png?v=1623945227" width="150"
+                        height="150"></a>
+                <h4>2SD1384 Pequeña Señal</h4>
+            </div>
+
+            <div class="uno">
+                <a href="74HC148N CMOS Codificador Octal 8 a 3 Lineas"><img src="https://cdn.shopify.com/s/files/1/0409/9041/products/16pines_fb43ac7d-db92-48e2-89eb-7cb223ed8017_grande.png?v=1611246712
+                    " alt="facebook" width="150" height="150"></a>
+                <h4>74HC148N CMOS Codificador Octal 8 a 3 Lineas</h4>
+            </div>
+
+            <div class="uno">
+                <a href="Display LCD Gráfica 84 x 84 Nokia 5110"><img src="https://cdn.shopify.com/s/files/1/0409/9041/products/z_2cf6959c-f997-4753-8f72-f278c13b5abe_grande.png?v=1636045635
+                    " alt="facebook" width="150" height="150"></a>
+                <h4>Display LCD Gráfica 84 x 84 Nokia 5110
+                </h4>
+            </div>
+            <div class="tres">
+                <a href="Display Cristal Líquido 16 x 2 Luz Azul"><img
+                        src="https://cdn.shopify.com/s/files/1/0409/9041/products/z_5cf3fdde-a0e1-469e-884f-74688c99106f_grande.png?v=1636053561" alt="facebook"
+                        width="150" height="150"></a>
+                <h4>Display Cristal Líquido 16 x 2 Luz Azul</h4>
+            </div>
+
+        </div>
+        
+        
     </div>
     <div>
         
