--- a/pagina-web/src/app/seccionayuda/seccionayuda.component.html
+++ b/pagina-web/src/app/seccionayuda/seccionayuda.component.html
@@ -72,7 +72,7 @@
                 seguir tu problema y ayudarte a resolverlo.
             </h4>
             <h4>
-                Si completaste el pago en Mercado Libre y llegas a tener un problema, te devolvemos el 100% del
+                Si completaste el pago en Tecnologyc share y llegas a tener un problema, te devolvemos el 100% del
                 dinero
                 porque tu compra está siempre protegida.
             </h4>
@@ -119,7 +119,7 @@
 
                 <li>Imprime la etiqueta y pégala o escribe el código de devolución en el paquete.</li>
 
-                <li>Entrega el paquete al correo o agencia de Mercado Libre que te asignemos.</li>
+                <li>Entrega el paquete al correo o agencia de Tecnologyc share que te asignemos.</li>
 
                 <li>Si compraste más de una unidad del mismo producto, debes devolver todos los artículos para recuperar
                     tu dinero.</li>
@@ -167,7 +167,7 @@
                 seguir tu problema y ayudarte a resolverlo.
             </h4>
             <h4>
-                Si completaste el pago en Mercado Libre y llegas a tener un problema, te devolvemos el 100% del
+                Si completaste el pago en Tecnologyc share y llegas a tener un problema, te devolvemos el 100% del
                 dinero
                 porque tu compra está siempre protegida.
             </h4>
@@ -214,7 +214,7 @@
 
                 <li>Imprime la etiqueta y pégala o escribe el código de devolución en el paquete.</li>
 
-                <li>Entrega el paquete al correo o agencia de Mercado Libre que te asignemos.</li>
+                <li>Entrega el paquete al correo o agencia de Tecnologyc share que te asignemos.</li>
 
                 <li>Si compraste más de una unidad del mismo producto, debes devolver todos los artículos para recuperar
                     tu dinero.</li>
@@ -263,7 +263,7 @@
                 seguir tu problema y ayudarte a resolverlo.
             </h4>
             <h4>
-                Si completaste el pago en Mercado Libre y llegas a tener un problema, te devolvemos el 100% del
+                Si completaste el pago en Tecnologyc share y llegas a tener un problema, te devolvemos el 100% del
                 dinero
                 porque tu compra está siempre protegida.
             </h4>
@@ -310,7 +310,7 @@
 
                 <li>Imprime la etiqueta y pégala o escribe el código de devolución en el paquete.</li>
 
-                <li>Entrega el paquete al correo o agencia de Mercado Libre que te asignemos.</li>
+                <li>Entrega el paquete al correo o agencia de Tecnologyc share que te asignemos.</li>
 
                 <li>Si compraste más de una unidad del mismo producto, debes devolver todos los artículos para recuperar
                     tu dinero.</li>
