--- a/pagina-web/src/app/Ejemplos productos/productcuatro/productcuatro.component.html
+++ b/pagina-web/src/app/Ejemplos productos/productcuatro/productcuatro.component.html
@@ -21,6 +21,7 @@
         <li>Colores variados en el arnés.</li>
         <li>Excelente conductividad eléctrica.</li>
         <li>Espaciado estándar 0.1″ (10 milésimas de pulgada) entre conexiones.</li>
+        <h3>30.00$ MXN</h3>
         <button class="menos">-</button>
         <input type="text" size="1" maxlength="30" value="1" name="nombre">
         <button class="mass">+</button>
@@ -33,26 +34,28 @@
 </div>
 <div class="arriba">
     <div class="uno">
-        <a href="ProductoUno"><img src="https://m.media-amazon.com/images/I/71z22cRPeeL.jpg" width="150"
-                height="150"></a>
-        <h4>Arduino UNO R3 [A000066] Placa de microcontrolador</h4>
+        <a href="PoiLee 1N5408 - 30 unidades de diodos"><img
+            src="https://m.media-amazon.com/images/I/5128rVjF6WL._SX342_.jpg" alt="facebook"
+            width="150" height="150"></a>
+    <h4>PoiLee 1N5408 - 30 unidades de diodos de 3 A 1000 V</h4>
     </div>
 
     <div class="uno">
-        <a href="Productodos"><img src="https://cdn.shopify.com/s/files/1/1040/8806/products/photo_OS-00008_Proto_Grande_Blanca_10_700x700.png?v=1600808942
-                " alt="facebook" width="150" height="150"></a>
-        <h4>PROTOBOARD GRANDE 800 PUNTOS</h4>
+        <a href="2SD1384 Pequeña Señal"><img src="https://cdn.shopify.com/s/files/1/0409/9041/products/6soic_62f818c0-766c-47f0-8575-072c9af85a29_grande.png?v=1623945227" width="150"
+            height="150"></a>
+    <h4>2SD1384 Pequeña Señal</h4>
     </div>
 
     <div class="uno">
-        <a href="Productotres"><img src="https://cdn.shopify.com/s/files/1/1040/8806/products/photo_OS-00005_ProtoboardChica_400p_01_700x700.png?v=1595434654
-                " alt="facebook" width="150" height="150"></a>
-        <h4>PROTOBOARD CHICA 400 PUNTOS</h4>
+        <a href="Cerradura Electrónica Solenoide 12 V para Puerta"><img src="https://cdn.shopify.com/s/files/1/0409/9041/products/z_948cbf72-8547-4eca-a18b-913ef596bd46_grande.png?v=1642180473" width="150"
+            height="150"></a>
+    <h4>Cerradura Electrónica Solenoide 12 V para Puerta</h4>
     </div>
     <div class="tres">
-        <a href="Productocuatro"><img src="https://elecan3d.com/995-large_default/cable-dupont-macho-macho-30cm.jpg"
-                alt="facebook" width="150" height="150"></a>
-        <h4>Cable Dupont Macho-Macho 30cm</h4>
+        <a href="Cable Dupont Macho-Macho 30cm"><img
+            src="https://elecan3d.com/995-large_default/cable-dupont-macho-macho-30cm.jpg" alt="facebook"
+            width="150" height="150"></a>
+    <h4>Cable Dupont Macho-Macho 30cm</h4>
     </div>
 
 </div>
