--- a/pagina-web/src/app/header/header.component.html
+++ b/pagina-web/src/app/header/header.component.html
@@ -16,7 +16,7 @@
             <li class="buscador">
                 <div class="container-1">
                     <span class="icon"><i class="fa fa-search"></i></span>
-                    <input type="search" id="search" placeholder="Search..." />
+                    <input type="searchi" class ="searchi" id="searchi" placeholder="Search..." />
                 </div>
             </li>
         </ul>
