--- a/pagina-web/src/app/app.component.html
+++ b/pagina-web/src/app/app.component.html
@@ -8,7 +8,7 @@
     <nav>
         <ul>
             <li><a [routerLink]="['inicio']">Inicio</a></li>
-            <li><a href="#">Paquetes</a></li>
+            <li><a [routerLink]="['httpPrueba']">Paquetes</a></li>
             <li><a href="https://ebotics.com/es/producto/kit-makermania-crocplay/">Community</a></li>
             <li><a [routerLink]="['seccionayuda']">Ayuda</a></li>
             <li><a [routerLink]="['Sobrenosotros']">Acerca de nosotros</a></li>
